--- a/Assignment_2_Q1.ipynb
+++ b/Assignment_2_Q1.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Assignment 2 - Q1",
       "provenance": [],
-      "authorship_tag": "ABX9TyODi6w7yDDzwxnmFmkX77us",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyM+2EmZx7NHgO42ZiyiC/s7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 20,
       "metadata": {
         "id": "msa4GQ1kEsVO"
       },
@@ -41,7 +42,8 @@
         "import matplotlib.pyplot as plt\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import confusion_matrix\n",
-        "np.random.seed(0)"
+        "np.random.seed(0)\n",
+        "from sklearn.metrics import confusion_matrix"
       ]
     },
     {
@@ -54,7 +56,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AsRXPXvIMExj",
-        "outputId": "e4a5bd3d-461c-4c23-ba30-7917a4507bd4"
+        "outputId": "c39d6477-f1df-4d97-b3a8-9287bcc43f97"
       },
       "execution_count": 2,
       "outputs": [
@@ -79,7 +81,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E0WahRsUMFLi",
-        "outputId": "7dd86247-543b-4128-c0ef-a8b6fdc5515f"
+        "outputId": "06528008-0510-423d-def2-fcdf6f958f76"
       },
       "execution_count": 3,
       "outputs": [
@@ -103,7 +105,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oj2_nmMZMGUO",
-        "outputId": "2544cec3-6451-46f9-9994-531c94007345"
+        "outputId": "08ccc007-aa75-4ff3-9418-7ec69fbbab26"
       },
       "execution_count": 4,
       "outputs": [
@@ -160,6 +162,8 @@
       "source": [
         "datan = data.values\n",
         "\n",
+        "np.random.shuffle(datan)\n",
+        "\n",
         "X = datan[:, :60]\n",
         "print(X.shape)\n",
         "y = datan[:, 60]\n",
@@ -179,9 +183,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l3oNsdy48qpM",
-        "outputId": "13cf5cec-3280-423d-c443-c7138d9c59bc"
+        "outputId": "8a1d1ea6-8d51-4326-ba50-06c017bd37e9"
       },
-      "execution_count": 9,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,9 +217,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SgiwM4Av-7Qu",
-        "outputId": "3eac9ef9-37e8-4d79-fbd0-2e2b5ffe65f9"
+        "outputId": "3b47c50a-e65f-46bd-8304-f81e3ac3abbf"
       },
-      "execution_count": 20,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,25 +242,45 @@
       "metadata": {
         "id": "3Lbbsxuj_ePW"
       },
-      "execution_count": 14,
+      "execution_count": 24,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "def train(iters, W, b, X_train, y_train):\n",
-        "  for i in range(X_train.shape[0]):\n",
-        "    h = hypothesis(W, X_train[i], b)\n",
-        "    if (h != y_train[i]):\n",
-        "      W = W + y_train[i]*X_train[i]\n",
-        "      b = b + y_train[i]\n",
+        "  # Init weights\n",
+        "  W = np.random.rand(60)\n",
+        "  print(W.shape)\n",
+        "\n",
+        "  # Init bias\n",
+        "  b = np.random.rand(1)\n",
+        "  print(b.shape)\n",
+        "  for j in range(iters):\n",
+        "    for i in range(X_train.shape[0]):\n",
+        "      h = hypothesis(W, X_train[i], b)\n",
+        "      if (h != y_train[i]):\n",
+        "        W = W + y_train[i]*X_train[i]\n",
+        "        b = b + y_train[i]\n",
         "\n",
         "    return W"
       ],
       "metadata": {
         "id": "BB0ZGcXI_uiZ"
       },
-      "execution_count": 18,
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sigmoid(z):\n",
+        "  return 1.0/(1 + np.exp(-z)) ###activation function"
+      ],
+      "metadata": {
+        "id": "1U7Yu85P_3kc"
+      },
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -273,34 +297,77 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pSbaeHIqBm7X",
-        "outputId": "94d1f414-d08e-4084-d8c8-376a99431397"
+        "outputId": "9fed51cb-61f5-42b1-f323-9de50f280d11"
       },
-      "execution_count": 21,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[0.30925129 0.40321803 0.63306201 0.89065281 0.43260636 0.92821871\n",
-            " 0.59208066 0.43178493 0.59278027 0.35450605 0.65701977 0.65230895\n",
-            " 0.82171856 0.40276676 0.03756505 0.98463162 0.44814283 0.93763523\n",
-            " 0.67204106 0.26669688 0.56406436 0.95693298 0.11348592 0.27222936\n",
-            " 0.08205775 0.76527058 0.02168872 0.13725135 0.26062867 0.87108257\n",
-            " 0.17941007 0.43327873 0.32511791 0.58340419 0.9364681  0.94078166\n",
-            " 0.05250817 0.59621112 0.89180097 0.78093113 0.2115339  0.76499445\n",
-            " 0.18906266 0.89875959 0.00893127 0.09023298 0.6191828  0.3824401\n",
-            " 0.09656288 0.98493331 0.89658126 0.27111339 0.47319005 0.47975387\n",
-            " 0.50839039 0.96725931 0.09995852 0.03965046 0.48370646 0.45825901]\n",
-            "[0.30925129 0.40321803 0.63306201 0.89065281 0.43260636 0.92821871\n",
-            " 0.59208066 0.43178493 0.59278027 0.35450605 0.65701977 0.65230895\n",
-            " 0.82171856 0.40276676 0.03756505 0.98463162 0.44814283 0.93763523\n",
-            " 0.67204106 0.26669688 0.56406436 0.95693298 0.11348592 0.27222936\n",
-            " 0.08205775 0.76527058 0.02168872 0.13725135 0.26062867 0.87108257\n",
-            " 0.17941007 0.43327873 0.32511791 0.58340419 0.9364681  0.94078166\n",
-            " 0.05250817 0.59621112 0.89180097 0.78093113 0.2115339  0.76499445\n",
-            " 0.18906266 0.89875959 0.00893127 0.09023298 0.6191828  0.3824401\n",
-            " 0.09656288 0.98493331 0.89658126 0.27111339 0.47319005 0.47975387\n",
-            " 0.50839039 0.96725931 0.09995852 0.03965046 0.48370646 0.45825901]\n"
+            "(60,)\n",
+            "(1,)\n",
+            "[0.52459262 0.44201532 0.85263492 0.43343897 0.82687037 0.50934207\n",
+            " 0.08637698 0.66003986 0.20659461 0.84727532 0.68135913 0.17836735\n",
+            " 0.06985902 0.00968817 0.89204966 0.13346521 0.77919197 0.92516343\n",
+            " 0.71517875 0.49081861 0.4694983  0.88270929 0.48841006 0.41456749\n",
+            " 0.17411195 0.47528944 0.78364797 0.55642943 0.15986708 0.14382937\n",
+            " 0.64946303 0.5392236  0.32568477 0.14701389 0.15987007 0.12941234\n",
+            " 0.57892239 0.09226017 0.91054472 0.08297175 0.80037846 0.87713097\n",
+            " 0.09345946 0.42630588 0.47322067 0.58019711 0.71624417 0.02706898\n",
+            " 0.73139734 0.76696351 0.00976644 0.30828617 0.23286547 0.50342743\n",
+            " 0.95372138 0.5578113  0.09746869 0.62167849 0.86302262 0.15763228]\n",
+            "[0.02168872 0.13725135 0.26062867 0.87108257 0.17941007 0.43327873\n",
+            " 0.32511791 0.58340419 0.9364681  0.94078166 0.05250817 0.59621112\n",
+            " 0.89180097 0.78093113 0.2115339  0.76499445 0.18906266 0.89875959\n",
+            " 0.00893127 0.09023298 0.6191828  0.3824401  0.09656288 0.98493331\n",
+            " 0.89658126 0.27111339 0.47319005 0.47975387 0.50839039 0.96725931\n",
+            " 0.09995852 0.03965046 0.48370646 0.45825901 0.23526284 0.05887028\n",
+            " 0.12384442 0.85675525 0.39966737 0.38139715 0.02197364 0.3747527\n",
+            " 0.66160729 0.6253582  0.91399122 0.6717943  0.32408269 0.31621999\n",
+            " 0.83331581 0.77580322 0.28115297 0.71392719 0.56157728 0.39966001\n",
+            " 0.53086013 0.08523306 0.66567773 0.02963482 0.88928732 0.68211896]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "z = np.dot(X_test, W_trained.T)\n",
+        "# print(z)\n",
+        "print(y_test)\n",
+        "print(z.shape)\n",
+        "h = sigmoid(z)\n",
+        "y_pred=h>0.5\n",
+        "y_pred=y_pred.astype(int)\n",
+        "print(y_pred)\n",
+        "cm=confusion_matrix(y_test, y_pred)\n",
+        "print(cm)\n",
+        "accuracy=(cm[0][0]+cm[1][1])/(len(y_test))\n",
+        "print(accuracy)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "abr3x2v8_ES6",
+        "outputId": "5db5008d-6852-4c94-a431-a72c98b82acb"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1. 1. 1. 0. 1. 1. 1. 1. 1. 1. 0. 1. 0. 0. 0. 0. 1. 0. 1. 1. 1. 1. 0. 0.\n",
+            " 0. 1. 1. 1. 1. 1. 0. 0. 1. 0. 1. 1. 0. 1. 1. 0. 1. 0.]\n",
+            "(42,)\n",
+            "[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+            " 1 1 1 1 1]\n",
+            "[[ 0 16]\n",
+            " [ 0 26]]\n",
+            "0.6190476190476191\n"
           ]
         }
       ]
