Remove sigmoid function

--- a/Assignment_2_Q1.ipynb
+++ b/Assignment_2_Q1.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignment 2 - Q1",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM+2EmZx7NHgO42ZiyiC/s7",
+      "authorship_tag": "ABX9TyPDoILt89yhLQc3SJGUy11d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 64,
       "metadata": {
         "id": "msa4GQ1kEsVO"
       },
@@ -56,9 +56,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AsRXPXvIMExj",
-        "outputId": "c39d6477-f1df-4d97-b3a8-9287bcc43f97"
+        "outputId": "ed4a13f0-90d1-4b37-b066-aeb957362084"
       },
-      "execution_count": 2,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
@@ -81,15 +81,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E0WahRsUMFLi",
-        "outputId": "06528008-0510-423d-def2-fcdf6f958f76"
+        "outputId": "128b6cdb-4730-4c92-d31e-90f75d324a40"
       },
-      "execution_count": 3,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -105,9 +105,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oj2_nmMZMGUO",
-        "outputId": "08ccc007-aa75-4ff3-9418-7ec69fbbab26"
+        "outputId": "2753f504-26b4-4f57-9eb9-7f85beb2bb00"
       },
-      "execution_count": 4,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,9 +183,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l3oNsdy48qpM",
-        "outputId": "8a1d1ea6-8d51-4326-ba50-06c017bd37e9"
+        "outputId": "7f85424a-dda6-4315-ada3-a911dbbcf7fc"
       },
-      "execution_count": 22,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,9 +217,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SgiwM4Av-7Qu",
-        "outputId": "3b47c50a-e65f-46bd-8304-f81e3ac3abbf"
+        "outputId": "d2a01710-e408-41b4-b436-615aecab591a"
       },
-      "execution_count": 23,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,7 +242,7 @@
       "metadata": {
         "id": "3Lbbsxuj_ePW"
       },
-      "execution_count": 24,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -262,13 +262,12 @@
         "      if (h != y_train[i]):\n",
         "        W = W + y_train[i]*X_train[i]\n",
         "        b = b + y_train[i]\n",
-        "\n",
-        "    return W"
+        "  return W, b"
       ],
       "metadata": {
         "id": "BB0ZGcXI_uiZ"
       },
-      "execution_count": 37,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -280,26 +279,27 @@
       "metadata": {
         "id": "1U7Yu85P_3kc"
       },
-      "execution_count": 26,
+      "execution_count": 72,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "iters = 2000\n",
-        "W_trained = train(iters, W, b, X_train, y_train)\n",
+        "iters = 4000\n",
+        "W_trained, b_trained = train(iters, W, b, X_train, y_train)\n",
         "\n",
         "print(W)\n",
-        "print(W_trained)"
+        "print(W_trained)\n",
+        "print(b_trained)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pSbaeHIqBm7X",
-        "outputId": "9fed51cb-61f5-42b1-f323-9de50f280d11"
+        "outputId": "2eb67f95-a45f-4047-a950-08f917a4662f"
       },
-      "execution_count": 38,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "stream",
@@ -317,16 +317,17 @@
             " 0.09345946 0.42630588 0.47322067 0.58019711 0.71624417 0.02706898\n",
             " 0.73139734 0.76696351 0.00976644 0.30828617 0.23286547 0.50342743\n",
             " 0.95372138 0.5578113  0.09746869 0.62167849 0.86302262 0.15763228]\n",
-            "[0.02168872 0.13725135 0.26062867 0.87108257 0.17941007 0.43327873\n",
-            " 0.32511791 0.58340419 0.9364681  0.94078166 0.05250817 0.59621112\n",
-            " 0.89180097 0.78093113 0.2115339  0.76499445 0.18906266 0.89875959\n",
-            " 0.00893127 0.09023298 0.6191828  0.3824401  0.09656288 0.98493331\n",
-            " 0.89658126 0.27111339 0.47319005 0.47975387 0.50839039 0.96725931\n",
-            " 0.09995852 0.03965046 0.48370646 0.45825901 0.23526284 0.05887028\n",
-            " 0.12384442 0.85675525 0.39966737 0.38139715 0.02197364 0.3747527\n",
-            " 0.66160729 0.6253582  0.91399122 0.6717943  0.32408269 0.31621999\n",
-            " 0.83331581 0.77580322 0.28115297 0.71392719 0.56157728 0.39966001\n",
-            " 0.53086013 0.08523306 0.66567773 0.02963482 0.88928732 0.68211896]\n"
+            "[0.35911065 0.70889756 0.58737531 0.80959338 0.20407206 0.79639677\n",
+            " 0.2664079  0.29826442 0.97817217 0.04601358 0.18975362 0.5208748\n",
+            " 0.37599427 0.24209971 0.68455274 0.66923696 0.963741   0.87860037\n",
+            " 0.99743613 0.362888   0.04523449 0.32529681 0.49691475 0.17219571\n",
+            " 0.08507608 0.45272886 0.93266553 0.76316501 0.31148607 0.8886155\n",
+            " 0.69727429 0.46334402 0.26461953 0.57553389 0.194901   0.74123167\n",
+            " 0.93692788 0.65926787 0.72499409 0.16448841 0.74822397 0.49735684\n",
+            " 0.08738269 0.38644741 0.72944811 0.57821035 0.30638265 0.988749\n",
+            " 0.57403184 0.94494919 0.55977423 0.56466654 0.05117044 0.10407877\n",
+            " 0.61443806 0.73163371 0.24403243 0.96397573 0.74123807 0.23801128]\n",
+            "[0.64442028]\n"
           ]
         }
       ]
@@ -334,11 +335,14 @@
     {
       "cell_type": "code",
       "source": [
-        "z = np.dot(X_test, W_trained.T)\n",
+        "z = np.dot(X_test, W_trained.T) + b\n",
         "# print(z)\n",
         "print(y_test)\n",
         "print(z.shape)\n",
-        "h = sigmoid(z)\n",
+        "print(z)\n",
+        "z_min = np.min(z)\n",
+        "z_max = np.max(z)\n",
+        "h = (z - z_min)/(z_max - z_min)\n",
         "y_pred=h>0.5\n",
         "y_pred=y_pred.astype(int)\n",
         "print(y_pred)\n",
@@ -352,9 +356,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "abr3x2v8_ES6",
-        "outputId": "5db5008d-6852-4c94-a431-a72c98b82acb"
+        "outputId": "af1c9dd9-4483-4f12-ac0d-efa79d92e290"
       },
-      "execution_count": 39,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "stream",
@@ -363,11 +367,18 @@
             "[1. 1. 1. 0. 1. 1. 1. 1. 1. 1. 0. 1. 0. 0. 0. 0. 1. 0. 1. 1. 1. 1. 0. 0.\n",
             " 0. 1. 1. 1. 1. 1. 0. 0. 1. 0. 1. 1. 0. 1. 1. 0. 1. 0.]\n",
             "(42,)\n",
-            "[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
-            " 1 1 1 1 1]\n",
-            "[[ 0 16]\n",
-            " [ 0 26]]\n",
-            "0.6190476190476191\n"
+            "[ 9.91940421 10.20538418 10.13259889  6.38785624 10.96433999  8.80517688\n",
+            " 10.29195454  9.12230768 11.52211561 12.37551563 12.17801765  8.9533457\n",
+            " 12.15614789 11.07823684  9.61089924  9.275031    8.61307426 10.90944089\n",
+            "  8.84090757  9.16078471 10.27467201  9.56744829  9.9674524   8.98227923\n",
+            "  8.78676509  9.22413463  9.41664258 10.01576505 11.76945071 11.32253874\n",
+            " 10.02263285 10.11079503 11.00744842  9.13657929 11.56823428  8.59192285\n",
+            "  8.53362494 10.78733427  9.29164078  8.46039242 11.17598464  9.74843875]\n",
+            "[1 1 1 0 1 0 1 0 1 1 1 0 1 1 1 0 0 1 0 0 1 1 1 0 0 0 1 1 1 1 1 1 1 0 1 0 0\n",
+            " 1 0 0 1 1]\n",
+            "[[ 7  9]\n",
+            " [ 9 17]]\n",
+            "0.5714285714285714\n"
           ]
         }
       ]
